# TurboQuant-explained

./: .gitignore  KV_integration.md  PYPI_README.md  README.md  next_steps.md  pyproject.toml  reboot.md  stages.md  summary.md
docs/: algo.md  implementation.md  plan.md  plan2.md  results.md  table2.md
experiments/: beta_marginal_3d.py  data_utils.py  eval_metrics.py  fig1_error_histograms.py  fig2_grouped_histograms.py  fig3_dbpedia.py  fig3_mse_vs_bitwidth.py  glove_ann_search.py  glove_mse_validation.py  phase4_fig1_error_histograms.py  phase4_fig2_grouped_histograms.py  phase4_fig3_dbpedia_1M.py  rotation_benefits.py
experiments/results/phase2_glove/: glove_ann_table2.txt
experiments/results/phase3_dbpedia/: passing_criteria.md
images/concepts_claude/: coordinate_distribution_after_rotation.html  coordinate_independence.html  lloyd_max_idea2.html  rotation_energy_spreading.html
scripts/: hello.py  hypersphere.py  hypersphere_server.py  hypersphere_surface_area.py  visualize_hypersphere.py
tests/: test_smoke.py
turboquant/: __init__.py  codebook.py  quantizer.py  rotation.py
turboquant/cache/: codebook_16_d1536.npy  codebook_16_d300.npy  codebook_2_d128.npy  codebook_2_d1536.npy  codebook_2_d300.npy  codebook_2_d64.npy  codebook_2_d8.npy  codebook_32_d1536.npy  codebook_4_d128.npy  codebook_4_d1536.npy  codebook_4_d300.npy  codebook_4_d64.npy  codebook_4_d8.npy  codebook_8_d1536.npy  codebook_8_d300.npy  qjl_d128_seed43.pt  qjl_d300_seed123.pt  qjl_d64_seed43.pt  qjl_d8_seed43.pt  qjl_d8_seed46.pt  rotation_d128_seed42.pt  rotation_d300_seed42.pt  rotation_d64_seed42.pt  rotation_d64_seed44.pt  rotation_d8_seed42.pt  rotation_d8_seed44.pt  rotation_d8_seed45.pt  rotation_d8_seed47.pt
turboquant/kv_cache/: __init__.py  hooks.py  manager.py
