[project]
name = "hypersphere-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
    "torch>=2.7.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
