[project]
name = "turboquant"
version = "0.1.0"
description = "Near-optimal KV-cache compression for HuggingFace transformers using Lloyd-Max + QJL quantization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "kv-cache", "quantization", "transformer", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "transformers>=4.40",
]

[project.optional-dependencies]
experiments = [
    "dash>=2.0",
    "plotly>=5.0",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.urls]
Repository = "https://github.com/skr3178/TurboQuant-explained"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["turboquant"]

[tool.hatch.build.targets.wheel.force-include]
"turboquant/cache" = "turboquant/cache"

# Dev-only: CUDA torch index for local development, ignored by pip
[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
